rename boot.css file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
     <!-- my css -->
-    <link rel="stylesheet" href="boot.css" />
+    <link rel="stylesheet" href="stuff/style.css" />
     <title>Sakha Pratama</title>
   </head>
   <body id="home">
